000 - fix table on mobile view

--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -40,6 +40,20 @@
     width: 19rem;
 }
 
+.col-favorites {
+    width: 5rem;
+}
+
+.col-time {
+    width: 8rem;
+}
+
+.col-league {
+    width: 6rem;
+}
+
+
+
 .mobile {
     td {
         border: .005rem solid #DFDFDF;
